--- a/Backend/Incidents/Incidents/appsettings.json
+++ b/Backend/Incidents/Incidents/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Incidents": "Server=(localdb)\\MSSQLLocalDB; Database=IncidentsDb; trusted_connection=true;"
+  }
 }
+
