--- a/Backend/Incidents/Incidents.Tests/Incidents.Tests.csproj
+++ b/Backend/Incidents/Incidents.Tests/Incidents.Tests.csproj
@@ -1,17 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Incidents.Application\Incidents.Application.csproj" />
+    <ProjectReference Include="..\Incidents.Domain\Incidents.Domain.csproj" />
+    <ProjectReference Include="..\Incidents.Infrastructure\Incidents.Infrastructure.csproj" />
+    <ProjectReference Include="..\Incidents\Incidents.csproj" />
   </ItemGroup>
 
 </Project>
